# CGDK.buffer

./: LICENSE  ReadMe.md  ReadMe.txt  ReleaseNote.md  ReleaseNote.txt
C#/: ReadMe.md  ReadMe.txt  read_me.txt
C#/Example/: Example_VS2012.sln  Example_VS2013.sln  Example_VS2015.sln
C#/Example/Example01/: Eaxmple01.csproj  Program.cs
C#/Projects/: CGDbuffer(for CSharp)_VS2012.sln  CGDbuffer(for CSharp)_VS2013.sln  CGDbuffer(for CSharp)_VS2015.sln
C#/Projects/Buffers/: CGDbuffers(for CSharp).csproj  CGDbuffers.cs
C#/Projects/UnitTest_Functional/: UnitTest_Functional.cs  UnitTest_Functional.csproj
C#/Projects/UnitTest_Performance/: UnitTest_Performance.cs  UnitTest_Performance.csproj
C#/example/: example.vs16.sln  example.vs17.sln
C#/example/NET.core/: example.NET.core.sln
C#/example/example.01/: Program.cs  eaxmple.01.csproj
C#/projects/: CGDK.buffer.NET.core.sln  CGDK.buffer.NET.framework.sln  CGDK.buffer.NET.framework.vs17.sln  CGDK.buffer.NET.sln  CGDK.buffer.NET.vs17.sln  CGDK10.buffer.NET.core.vs17.sln  CGDK10.buffer.NET.framework.vs16.sln  CGDK10.buffer.NET.framework.vs17.sln  CGDK10.buffer.NET.vs17.sln
C#/projects/CGDK.buffer.Generator/: CGDK.buffer.Generator.csproj  CGDKbuffer.Generator.cs
C#/projects/buffer.NET/: CGDK.buffer.NET.csproj  (+3 more)
C#/projects/buffer.NET.core/: CGDK - Backup.buffer.NET.core.csproj  CGDK.buffer.NET.core.csproj  CGDKbuffer.NET.core.cs  CGDKbuffer.NET.cs
C#/projects/buffer.NET.framework/: CGDK.buffer.NET.framework.cs  CGDK.buffer.NET.framework.csproj  CGDKbuffer.NET.framework.cs
C#/unit_test/: CGDK.buffer.unit_test.NET.core.sln  CGDK.buffer.unit_test.NET.framework.sln  CGDK.buffer.unit_test.NET.framework.vs17.sln  CGDK.buffer.unit_test.NET.sln
C++/: CGDbuffer  ReadMe.md  ReadMe.txt
C++/Buffers/: CGDbuffer.h  CGDbuffer.inl  CGDbufferCommon.h  CGDbufferConfigures.h  CGDbufferFunctions.h  CGDptr.h  CGDptr.inl
C++/Example/: Example_VS2010.sln  Example_VS2012.sln  Example_VS2013.sln  Example_VS2015.sln
C++/Projects/: CGbuffer(C++)_VS2010.sln  CGbuffer(C++)_VS2012.sln  CGbuffer(C++)_VS2013.sln  CGbuffer(C++)_VS2015.sln
C++/buffer/: CGDbuffer.h  CGDbufferCommon.h  CGDbufferConfigures.h  CGDbufferFunctions.h  CGDptr.inl  basic_buffer  basic_buffer.h  basic_buffer.inl  buffer_base.h  buffer_common.h  buffer_traits.h  buffer_view  buffer_view.h  buffer_view.inl  ioserializer.h  iserializer.h  make_shared_buffer.h  oserializer.h  serializer.h  shared_buffer.h
C++/document/: Getting_start_CGDK.buffer.pptx  intruduce_CGDK.buffer.pptx
C++/project/: CGDK.buffer.vcxitems  CGDK.buffer.vcxitems.filters  CGDK.buffer.vs17.sln  CGbuffer(C++)_VS2012.sln  readme.txt
C++/tutorial/: CGDK.buffer.tutorial.vs16.sln  CGDK.buffer.tutorial.vs17.sln  CMakeLists.txt
C++/tutorial/Example01/: Example01_VS2010.vcxproj  Example01_VS2012.vcxproj  Example01_VS2012.vcxproj.filters  Example01_VS2015.vcxproj  stdafx.cpp  stdafx.h  targetver.h
C++/tutorial/buffer.01.basic/: CMakeLists.txt  tutorial.buffer.01.basic.console.cpp  tutorial.buffer.01.basic.console.vs16.vcxproj  tutorial.buffer.01.basic.console.vs16.vcxproj.filters  tutorial.buffer.01.basic.console.vs17.vcxproj  tutorial.buffer.01.basic.console.vs17.vcxproj.filters
C++/tutorial/buffer.02.append_extract/: CMakeLists.txt  tutorial.buffer.02.append_extract.console.cpp  tutorial.buffer.02.append_extract.console.vs16.vcxproj  tutorial.buffer.02.append_extract.console.vs16.vcxproj.filters  tutorial.buffer.02.append_extract.console.vs17.vcxproj
C++/tutorial/buffer.02.buffer_operator/: CMakeLists.txt  tutorial.buffer.02.buffer_operator.console.cpp  tutorial.buffer.02.buffer_operator.console.vs16.vcxproj  tutorial.buffer.02.buffer_operator.console.vs17.vcxproj  tutorial.buffer.02.buffer_operator.console.vs17.vcxproj.filters
C++/tutorial/buffer.03.struct_serialize/: CMakeLists.txt  tutorial.buffer.03.struct_serialize.console.cpp  tutorial.buffer.03.struct_serialize.console.vs16.vcxproj  tutorial.buffer.03.struct_serialize.console.vs16.vcxproj.filters  tutorial.buffer.03.struct_serialize.console.vs17.vcxproj  tutorial.buffer.03.struct_serialize.console.vs17.vcxproj.filters
C++/tutorial/buffer.04.Ibuffer_serializable/: CMakeLists.txt  tutorial.buffer.04.Ibuffer_serializable.console.cpp  tutorial.buffer.04.Ibuffer_serializable.console.vs16.vcxproj  tutorial.buffer.04.Ibuffer_serializable.console.vs17.vcxproj  tutorial.buffer.04.Ibuffer_serializable.console.vs17.vcxproj.filters
C++/tutorial/buffer.06.static_buffer/: CMakeLists.txt  tutorial.buffer.06.static_buffer.cpp  tutorial.buffer.06.static_buffer.vcxproj  tutorial.buffer.06.static_buffer.vcxproj.filters
C++/unit_test/: CGDK.buffer.unit_test.vs16.sln  CGDK.buffer.unit_test.vs17.sln  CMakeLists.txt  vcpkg.json
C++/unit_test/unit_test.benchmark.basic/: CGDK.buffer.unit_test.benchmark.basic.vs16.vcxproj  CGDK.buffer.unit_test.benchmark.basic.vs17.vcxproj  CGDK.buffer.unit_test.benchmark.basic.vs17.vcxproj.filters  CMakeLists.txt  common_data.cpp  definitions.h  pch.h  test.cpp  test_cgdk.cpp  test_flatbuffers.cpp  test_protobuf.cpp
C++/unit_test/unit_test.benchmark.basic/flatbuffers/: CMakeLists.txt  generate_messages.bat  messages_test_1.fbs  messages_test_2.fbs  messages_test_3.fbs  messages_test_4.fbs  messages_test_5.fbs  messages_test_6.fbs  messages_test_7.fbs  messsages_test.fbs
C++/unit_test/unit_test.benchmark.basic/protobuf/: CMakeLists.txt  messages_test.proto
C++/unit_test/unit_test.benchmark.complex/: CGDK.buffer.unit_test.benchmark.complex.vs16.vcxproj  CGDK.buffer.unit_test.benchmark.complex.vs17.vcxproj  CGDK.buffer.unit_test.benchmark.complex.vs17.vcxproj.filters  CMakeLists.txt  pch.h  test_cgdk.cpp  test_protobuf.cpp
C++/unit_test/unit_test.benchmark.complex/protobuf/: generate_messages.bat  generate_messages.sh  messages_test.pb.cc  messages_test.pb.h  messages_test.proto
C++/unit_test/unit_test.function/: CGDK.buffer.unit_test.function.vs16.vcxproj  CGDK.buffer.unit_test.function.vs17.vcxproj  CMakeLists.txt  pch.h  test.cpp  test_buffer_view.cpp  test_data.cpp  test_data.h  test_shared_buffer.cpp
(+106 files in other folders)
