#*****************************************************************************
#*                                                                           *
#*                      Cho sanghyun's Game Classes II                       *
#*                      Ver 10.0 / release 2019.12.11                        *
#*                                                                           *
#*                            CMake - CGDK.system                            *
#*                                                                           *
#*                                                                           *
#*                                                                           *
#*                                                                           *
#*  This Program is programmed by Cho SangHyun. sangduck@cgcii.co.kr         *
#*  Best for Game Developement and Optimized for Game Developement.          *
#*                                                                           *
#*                (c) 2016 Cho Sanghyun All right reserved.                  *
#*                          http://www.CGCII.co.kr                           *
#*                                                                           *
#*****************************************************************************

#-----------------------------------------------------------------------------
# compile
#-----------------------------------------------------------------------------
# 1) uint.test
ADD_SUBDIRECTORY (./unit_test.benchmark.basic)
ADD_SUBDIRECTORY (./unit_test.benchmark.complex)
ADD_SUBDIRECTORY (./unit_test.function)
